security/policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portfolio-api-deny-all
  namespace: portfolio-app
spec:
  podSelector:
    matchLabels:
      app: portfolio-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-system
        - podSelector:
            matchLabels:
              app: portfolio-worker
      ports:
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
        - ipBlock:
            cidr: 10.20.0.0/16
      ports:
        - port: 5432
          protocol: TCP
        - port: 443
          protocol: TCP
